# rs-sudo

./: .gitignore  Cargo.toml  LICENSE  README.md  fixperms.sh  pw-hash.txt
src/: elevate.rs  errno.rs  hashgen.rs  pwcheck.rs  pwhash.rs  system.rs  types.rs
src/errors/: mod.rs  setuid.rs
src/externs/: mod.rs
